--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#f1ed87</color>
+    <color name="colorPrimaryDark">#bea256</color>
+    <color name="mainActivityBackground">#efedc1</color>
+    <color name="colorAccent">#29733a</color>
 </resources>
