--- a/app/src/main/res/layout/browser_fragment_layout.xml
+++ b/app/src/main/res/layout/browser_fragment_layout.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#faf"
+    android:background="#fff"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
